[gd_scene format=3 uid="uid://cqnmaugvff38g"]

[ext_resource type="PackedScene" uid="uid://dftrpkfy22rxb" path="res://scenes/Player.tscn" id="1_50hkb"]
[ext_resource type="Script" uid="uid://bfeb2iftb3jat" path="res://scripts/fountain.gd" id="1_m72p2"]
[ext_resource type="PackedScene" path="res://scenes/f_button.tscn" id="3_lfgns"]
[ext_resource type="AudioStream" uid="uid://co4dulatngutx" path="res://assets/sounds/Fountain/freesound_community-small-fountain-7073.mp3" id="4_uterx"]
[ext_resource type="AudioStream" uid="uid://bctbgw1wfmeqh" path="res://assets/sounds/Fountain/drinking.mp3" id="5_xo7qt"]

[sub_resource type="CircleShape2D" id="CircleShape2D_m72p2"]
radius = 303.08084

[node name="Fountain" type="Node2D" unique_id=167944169]
script = ExtResource("1_m72p2")

[node name="Range" type="Area2D" parent="." unique_id=1421986642]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range" unique_id=673113810]
shape = SubResource("CircleShape2D_m72p2")

[node name="Player" parent="." unique_id=211872251 instance=ExtResource("1_50hkb")]
position = Vector2(365, 9)

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=941659859]

[node name="F-button" parent="CanvasLayer" unique_id=900367709 instance=ExtResource("3_lfgns")]
visible = false
position = Vector2(576, 557)

[node name="Background_music" type="AudioStreamPlayer2D" parent="." unique_id=1543241933]
stream = ExtResource("4_uterx")
volume_db = 6.0
parameters/looping = true

[node name="Sip_sound" type="AudioStreamPlayer2D" parent="." unique_id=27271055]
stream = ExtResource("5_xo7qt")
volume_db = 10.0

[connection signal="body_entered" from="Range" to="." method="_on_range_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_range_body_exited"]
